--- a/SpaceHub.Server/SpaceHub.Server.csproj
+++ b/SpaceHub.Server/SpaceHub.Server.csproj
@@ -22,4 +22,10 @@
     </ProjectReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Models\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
