--- a/spacehub.client/package.json
+++ b/spacehub.client/package.json
@@ -23,6 +23,7 @@
     "@mantine/nprogress": "^7.11.0",
     "@mantine/spotlight": "^7.11.0",
     "@mantine/tiptap": "^7.11.0",
+    "@mantinex/mantine-logo": "^1.0.1",
     "@tabler/icons-react": "^3.7.0",
     "@tiptap/extension-link": "^2.4.0",
     "@tiptap/react": "^2.4.0",
