--- a/SpaceHub.Server/appsettings.json
+++ b/SpaceHub.Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContextConnection": "${CONNECTION_STRING}"
+    "ApplicationDbContextConnection": "Server=tcp:spacehub-dbserver.database.windows.net,1433;Initial Catalog=SpaceHubDB;Persist Security Info=False;User ID=spacehub-admin;Password=shauckland@24;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   }
 }
