--- a/spacehub.client/package.json
+++ b/spacehub.client/package.json
@@ -29,6 +29,7 @@
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
     "dayjs": "^1.11.11",
+    "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^8.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
